--- a/assets/main.scss
+++ b/assets/main.scss
@@ -8,6 +8,7 @@ body {
 }
 
 h2 {
-    color: #000
-    text-shadow: -1px -2px #6f6f6f;
+    background-color:cornsilk;
+    color: #000;
+    text-shadow: 2px 2px 7px #6f6f6f;
 }
