--- a/assets/main.scss
+++ b/assets/main.scss
@@ -4,7 +4,8 @@
 @import "{{ site.theme }}";
 
 body {
-    background-color:cornsilk
+    background-color:cornsilk;
+    font-family: Georgia, Times, serif;
 }
 
 h2 {
