we are (font) family

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -5,11 +5,14 @@
 
 body {
     background-color:cornsilk;
-    font-family: Georgia, Times, serif;
 }
 
 h2 {
     background-color:cornsilk;
     color: #000;
     text-shadow: 2px 2px 7px #6f6f6f;
+}
+
+p {
+    font-family: Georgia, Times, serif;
 }
