h2 background colors for fun? we'll see how it goes

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -8,9 +8,8 @@ body {
 }
 
 h2 {
-    background-color:cornsilk;
-    color: #000;
-    text-shadow: 2px 2px 7px #6f6f6f;
+    background-color:black;
+    color: cornsilk;
     font-size: large;
 }
 
