fonts and font sizes

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -7,10 +7,15 @@ body {
     background-color:cornsilk;
 }
 
+h1 {
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
 h2 {
+    text-align: center;
     background-color:black;
     color: cornsilk;
-    font-size: large;
+    font-size:x-large;
 }
 
 p {
