--- a/assets/main.scss
+++ b/assets/main.scss
@@ -18,10 +18,6 @@ h2 {
     font-size:x-large;
 }
 
-h3 {
-    font-weight: bold;
-}
-
 p {
-    font-family: Georgia, Times, serif;
+    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
