30 px size h2 lets go

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -15,7 +15,7 @@ h2 {
     text-align: center;
     background-color:black;
     color: cornsilk;
-    font-size:x-large;
+    font-size: 30 px;
 }
 
 p {
