header/footer styling

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -5,6 +5,7 @@
 
 header {
     background-color:black;
+    color:cornsilk;
 }
 
 body {
@@ -24,4 +25,9 @@ h2 {
 
 p {
     font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+}
+
+footer {
+    background-color:black;
+    color:cornsilk;
 }
