--- a/assets/main.scss
+++ b/assets/main.scss
@@ -18,7 +18,8 @@ h1 {
 }
 
 h2 {
-    text-align: center;
+    text-align: left;
+    padding: 20px;
     background-color:black;
     color: cornsilk;
     font-size: 75px;
