color change 2 and width out

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -5,8 +5,7 @@
 @import "{{ site.theme }}";
 
 header {
-    background-color: #000000;
-    color: #FFFFFF;
+    background-color: #FFFFFF;
 }
 
 body {
