background image try again pleasw work

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -9,7 +9,7 @@ header {
 }
 
 body {
-    background-image: url(https://img.freepik.com/premium-photo/notebook-paper-background-lined-notebook-paper-crumpled-paper-background_322958-2531.jpg?semt=ais_hybrid&w=1000);
+    background-image: url(https://img.freepik.com/premium-vector/vector-notebook-paper_1303870-18.jpg);
 }
 
 h1 {
