--- a/assets/main.scss
+++ b/assets/main.scss
@@ -15,7 +15,6 @@ body {
 
 h1 {
     font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    text-decoration: underline;
 }
 
 h2 {
@@ -24,6 +23,10 @@ h2 {
     background-color: #000000;
     color: #FFF8DC;
     font-size: 75px;
+}
+
+h3 {
+    text-decoration: underline;
 }
 
 p {
