another background image

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -9,7 +9,7 @@ header {
 }
 
 body {
-    background-image: url(https://img.freepik.com/premium-vector/vector-notebook-paper_1303870-18.jpg);
+    background-image: url(https://img.freepik.com/free-vector/blank-white-notepaper-design_53876-118304.jpg?semt=ais_hybrid&w=740);
     background-size: 100% 100%;
 }
 
