out photos, about change, no header, background change to auto

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -10,7 +10,7 @@ header {
 
 body {
     background-image: url(https://img.freepik.com/free-vector/blank-white-notepaper-design_53876-118304.jpg?semt=ais_hybrid&w=740);
-    background-size: cover;
+    background-size:auto;
 }
 
 h1 {
