--- a/assets/main.scss
+++ b/assets/main.scss
@@ -6,12 +6,13 @@
 
 header {
     background-color: #FFFFFF;
-    height: 200px;
+    height: 175px;
+    font-size: 160px;
 }
 
 body {
     background-image: url(https://img.freepik.com/premium-photo/notebook-paper-background-blank-pages-notebook_322958-6761.jpg);
-    background-size: contain;
+    background-size: 1500px;
 }
 
 h1 {
