--- a/_includes/page-image.html
+++ b/_includes/page-image.html
@@ -1,1 +1,1 @@
-<img src ="{{ page.image_url }}" alt ="{{ page.image_alt }}" width="100%">
+<img src ="{{ page.image_url }}" alt ="{{ page.image_alt }}" width="max">
