--- a/assets/main.scss
+++ b/assets/main.scss
@@ -7,7 +7,8 @@
 
 body {
     background-image: url(https://img.freepik.com/premium-photo/notebook-paper-background-blank-pages-notebook_322958-6761.jpg);
-    background-size: contain;
+    background-repeat: no-repeat;
+    background-size: auto;
 }
 
 h1 {
