COLOR CHANGE final?

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -20,7 +20,7 @@ h2 {
     text-align: left;
     padding: 20px;
     background-color: #000000;
-    color: #FFF8DC;
+    color: #FFFFFF;
     font-size: 75px;
 }
 
@@ -35,5 +35,5 @@ p {
 
 footer {
     background-color:#000000;
-    color: #FFF8DC;
+    color: #FFFFFF;
 }
