--- a/assets/main.scss
+++ b/assets/main.scss
@@ -7,8 +7,8 @@
 
 body {
     background-image: url(https://img.freepik.com/premium-photo/notebook-paper-background-blank-pages-notebook_322958-6761.jpg);
-    background-repeat: contain;
-    opacity: 0.5;
+    background-color: rgba(255,255,255,0.6);
+    background-blend-mode: lighten;
 }
 
 h1 {
