background image different

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -6,7 +6,7 @@
 
 
 body {
-    background-image: url(https://img.freepik.com/premium-photo/notebook-paper-background-blank-pages-notebook_322958-6761.jpg);
+    background-image: url(https://i.ibb.co/yDWdnXp/Untitled-design.jpg);
     background-color: rgba(255,255,255,0.6);
     background-blend-mode: lighten;
 }
