pixel width bod let's try ittttt

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -9,7 +9,7 @@ body {
     background-image: url(https://i.ibb.co/yDWdnXp/Untitled-design.jpg);
     background-color: rgba(255,255,255,0.6);
     background-blend-mode: lighten;
-    width: 100%;
+    width: 1000px;
 }
 
 h1 {
